# NFW

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: nfw.yml  nwf.yml
cmake/: ShaderCompilation.cmake
cmake/imgui/: CMakeLists.txt
src/: Api.h  CMakeLists.txt  Geometry.cpp  Geometry.h  Shader.cpp  Shader.h  ShaderStorage.cpp  ShaderStorage.h  Simple.cpp  Simple.h  Texture.cpp  Texture.h  TextureStorage.cpp  TextureStorage.h  Types.h  main.cpp
src/shaders/: Simple.fs.hlsl  Simple.vs.hlsl
